--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,8 +39,9 @@ version = "0.1.5"
 default = ["default_impl"]
 default_impl = ["default_impl_mail", "default_impl_compose"]
 
-default_impl_compose = [ "default_impl_name_composer" ]
+default_impl_compose = [ "default_impl_name_composer", "default_impl_component_id" ]
 default_impl_name_composer = [ "default_impl_any" ]
+default_impl_component_id = [ "default_impl_any" ]
 
 default_impl_mail = [ "default_impl_cpupool", "default_impl_fs", "default_impl_vfs" ]
 default_impl_cpupool = [ "futures-cpupool" , "default_impl_any" ]
