--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ nom = "3.1.0"
 owning_ref = "0.3.3"
 quoted_printable = "0.3.0"
 rand = "0.3.15"
+scoped-tls = "0.1.0"
 serde = "1.0.10"
 serde_derive = "1.0.10"
 
@@ -38,14 +39,11 @@ version = "0.1.5"
 [features]
 default = ["default_impl"]
 default_impl = ["default_impl_mail", "default_impl_compose"]
-
-default_impl_compose = [ "default_impl_name_composer", "default_impl_component_id" ]
-default_impl_name_composer = [ "default_impl_any" ]
-default_impl_component_id = [ "default_impl_any" ]
-
-default_impl_mail = [ "default_impl_cpupool", "default_impl_fs", "default_impl_vfs" ]
-default_impl_cpupool = [ "futures-cpupool" , "default_impl_any" ]
-default_impl_fs = [  "default_impl_any" ]
-default_impl_vfs = [  "default_impl_any" ]
-
 default_impl_any = []
+default_impl_component_id = ["default_impl_any"]
+default_impl_compose = ["default_impl_name_composer", "default_impl_component_id"]
+default_impl_cpupool = ["futures-cpupool", "default_impl_any"]
+default_impl_fs = ["default_impl_any"]
+default_impl_mail = ["default_impl_cpupool", "default_impl_fs", "default_impl_vfs"]
+default_impl_name_composer = ["default_impl_any"]
+default_impl_vfs = ["default_impl_any"]
