--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ serde_derive = "1.0.10"
 optional = true
 version = "0.1.5"
 
+[dev-dependencies]
+serde_json = "1.0.2"
+
 [features]
 default = ["default_impl"]
 default_impl = ["default_impl_mail", "default_impl_compose"]
