chore(new_api): integrated new header api into library
A lot of changes here but now everything compiler,
through some cleanup has to be done and some
TryFrom impl are still missing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [package]
-authors = ["Philipp korber <p.korber@1aim.com>"]
-build = "./build.rs"
+authors = ["Philipp Korber <p.korber@1aim.com>"]
 categories = []
 description = "TODO"
 keywords = ["mail", "codec", "mime", "smtp"]
