--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ base64 = "0.6.0"
 chrono = "0.4.0"
 error-chain = "0.10.0"
 futures = "0.1.14"
+idna = "0.1.4"
 mime = "0.3.2"
 nom = "3.1.0"
 owning_ref = "0.3.3"
