chore(codec/mime): added percent_encoded for mime params

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ idna = "0.1.4"
 mime = "0.3.2"
 nom = "3.1.0"
 owning_ref = "0.3.3"
+percent-encoding = "1.0.0"
 quoted_printable = "0.3.0"
 rand = "0.3.15"
 scoped-tls = "0.1.0"
