chore(headers/map): created special _general_ datatype for map
Now the "data type" logic and the "business" logic are separated.

While the type is still a module under `external` it's reday
to be moved in its own crate.

Its currently named Idotom (InDirection Optimized Total Order
Multimap) we need a better name

ref issue: #22

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ branch = "master"
 repository = "1aim/mail-codec"
 
 [dependencies]
+stable_deref_trait = "1.0"
 ascii = "0.8.4"
 base64 = "0.6.0"
 chrono = "0.4.0"
