chore(encoder): prototyped new encoder
- no longer pollutes API with genericity in encodable type
- allows elimination of one pointless copy of payload buffers
- allows future handling of MailType::Mime8BitEnabled
- as a side effect detects and "fixes" orphan CR/CL in
  header fields (which if appearing are bug, so maybe
  we should panic instead of "fixing" it)
- uses a new debugging/tracing interface for the encoder by
  having a conditional compiled `trace` field only enabled
  in test builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,4 @@ default_impl_fs = ["default_impl_any"]
 default_impl_mail = ["default_impl_cpupool", "default_impl_fs", "default_impl_vfs"]
 default_impl_name_composer = ["default_impl_any"]
 default_impl_vfs = ["default_impl_any"]
+debug_trace_tokens = []
