--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,13 @@
 authors = ["Philipp Korber <p.korber@1aim.com>"]
 categories = []
 description = "TODO"
+documentation = "https://docs.rs/mail-codec"
 keywords = ["mail", "codec", "mime", "smtp"]
 license = "MIT OR Apache-2.0"
 name = "mail-codec"
 readme = "./README.md"
 repository = "https://github.com/1aim/mail-codec"
 version = "0.1.0"
-documentation="https://docs.rs/mail-codec"
 
 [badges]
 
@@ -17,13 +17,13 @@ branch = "master"
 repository = "1aim/mail-codec"
 
 [dependencies]
-stable_deref_trait = "1.0"
 ascii = "0.8.4"
 base64 = "0.6.0"
 chrono = "0.4.0"
 error-chain = "0.11.0"
 futures = "0.1.14"
 idna = "0.1.4"
+log = "0.3.8"
 mime = "0.3.2"
 nom = "3.1.0"
 owning_ref = "0.3.3"
@@ -33,6 +33,7 @@ rand = "0.3.15"
 scoped-tls = "0.1.0"
 serde = "1.0.10"
 serde_derive = "1.0.10"
+stable_deref_trait = "1.0"
 
 [dependencies.futures-cpupool]
 optional = true
@@ -42,6 +43,7 @@ version = "0.1.5"
 serde_json = "1.0.2"
 
 [features]
+debug_trace_tokens = []
 default = ["default_impl"]
 default_impl = ["default_impl_mail", "default_impl_compose"]
 default_impl_any = []
@@ -52,4 +54,3 @@ default_impl_fs = ["default_impl_any"]
 default_impl_mail = ["default_impl_cpupool", "default_impl_fs", "default_impl_vfs"]
 default_impl_name_composer = ["default_impl_any"]
 default_impl_vfs = ["default_impl_any"]
-debug_trace_tokens = []
