--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,15 +32,23 @@ rand = "0.3.15"
 scoped-tls = "0.1.0"
 serde = "1.0.10"
 serde_derive = "1.0.10"
-total-order-multi-map = { path="./total-order-multi-map" }
-vec1 = { path="./vec1" }
 
-[dependencies.soft-ascii-string]
-git = "https://github.com/1aim/soft-ascii-string"
+[dependencies.tree_magic]
+version = "0.2.0"
+features = ["staticmime"]
 
 [dependencies.futures-cpupool]
 optional = true
 version = "0.1.5"
+
+[dependencies.soft-ascii-string]
+git = "https://github.com/1aim/soft-ascii-string"
+
+[dependencies.total-order-multi-map]
+path = "./total-order-multi-map"
+
+[dependencies.vec1]
+path = "./vec1"
 
 [dev-dependencies]
 serde_json = "1.0.2"
