--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,17 +17,9 @@ branch = "master"
 repository = "1aim/mail-codec"
 
 [dependencies]
-base64 = "0.6.0"
-chrono = "0.4.0"
-error-chain = "0.11.0"
 futures = "0.1.14"
-idna = "0.1.4"
 log = "0.3.8"
 mime = "0.3.2"
-nom = "3.1.0"
-owning_ref = "0.3.3"
-percent-encoding = "1.0.0"
-quoted_printable = "0.4.0"
 rand = "0.3.15"
 scoped-tls = "0.1.0"
 serde = "1.0.10"
@@ -49,6 +41,9 @@ path = "./total-order-multi-map"
 
 [dependencies.vec1]
 path = "./vec1"
+
+[dependencies.mail-codec-core]
+path = "./core"
 
 [dev-dependencies]
 serde_json = "1.0.2"
