chore(split): started moving all components in own crate [broken]
Requires giving it the now crate it's own error.
There are still open issues:
    - Core does not have all the parts of data mail-codec had before
      (FromInput, EncodableWord, ...) which will have to be handle.
    - some test miss assert_ok!/assert_err!
    - cant implement EncodableInHeader for Mime/TransferEncoding
      (as EncodableInHeader is no longer defined in the same module)
    - ...

[broken]
compilation of mail-codec and mail-codec-components is broken
mail-codec-core works inkluding tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,9 @@ path = "./vec1"
 [dependencies.mail-codec-core]
 path = "./core"
 
+[dependencies.mail-codec-components]
+path = "./components"
+
 [dev-dependencies]
 serde_json = "1.0.2"
 
@@ -60,6 +63,7 @@ default_impl_fs = ["default_impl_any"]
 default_impl_mail = ["default_impl_cpupool", "default_impl_fs", "default_impl_vfs"]
 default_impl_name_composer = ["default_impl_any"]
 default_impl_vfs = ["default_impl_any"]
+traceing = [ "mail-codec-core/traceing", "mail-codec-components/traceing" ]
 
 [workspace]
-members = ["total-order-multi-map", "vec1", "core"]
+members = ["total-order-multi-map", "vec1", "core", "components"]
