--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -22,6 +22,8 @@ idna = "0.1.4"
 percent-encoding = "1.0.0"
 serde = "1.0.10"
 serde_derive = "1.0.10"
+quoted-string = { path="../../quoted-string", version="0.5"}
+media-type-parser-utils = { path="../../media-type-parser-utils" }
 
 [dependencies.vec1]
 path = "../vec1"
