--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -15,21 +15,19 @@ nom = "3.1.0"
 error-chain = "0.11.0"
 owning_ref = "0.3.3"
 chrono = "0.4.0"
-mime = "0.3.2"
+mime = { git="https://github.com/1aim/mime", branch="parser_revamp" }
 base64 = "0.6.0"
 quoted_printable = "0.4.0"
 idna = "0.1.4"
 percent-encoding = "1.0.0"
 serde = "1.0.10"
 serde_derive = "1.0.10"
-quoted-string = { path="../../quoted-string", version="0.5"}
-media-type-parser-utils = { path="../../media-type-parser-utils" }
+quoted-string = { git="https://github.com/1aim/quoted-string", version="0.5"}
+media-type-parser-utils = { git="https://github.com/1aim/media-type-parser-utils" }
+soft-ascii-string = "0.2"
 
 [dependencies.vec1]
 path = "../vec1"
-
-[dependencies.soft-ascii-string]
-git = "https://github.com/1aim/soft-ascii-string"
 
 [dependencies.total-order-multi-map]
 path = "../total-order-multi-map"
