--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -23,7 +23,7 @@ percent-encoding = "1.0.0"
 serde = "1.0.10"
 serde_derive = "1.0.10"
 quoted-string = { git="https://github.com/1aim/quoted-string", version="0.5"}
-media-type-parser-utils = { git="https://github.com/1aim/media-type-parser-utils" }
+media-type-impl-utils = { git="https://github.com/1aim/media-type-impl-utils" }
 soft-ascii-string = "0.2"
 
 [dependencies.vec1]
