--- a/components/Cargo.toml
+++ b/components/Cargo.toml
@@ -11,12 +11,15 @@ repository = "https://github.com/1aim/mail-codec"
 
 [dependencies]
 nom = "3.1.0"
-mime = "0.3.2"
 quick-error = "1.2.1"
+soft-ascii-string = "0.2"
+quoted-string = { git="https://github.com/1aim/quoted-string", version="0.5" }
 
-
-[dependencies.soft-ascii-string]
-git = "https://github.com/1aim/soft-ascii-string"
+[dependencies.mime]
+git="https://github.com/1aim/mime"
+branch="parser_revamp"
+features=["expose-param-utils"]
+version="0.4.0"
 
 [dependencies.mail-codec-core]
 path = "../core"
