--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,20 @@ repository = "1aim/mail-codec"
 [dependencies]
 futures = "0.1.14"
 log = "0.3.8"
-mime = "0.3.2"
 rand = "0.3.15"
 scoped-tls = "0.1.0"
 serde = "1.0.10"
 serde_derive = "1.0.10"
+vec1 = { git="https://github.com/1aim/vec1" }
+total-order-multi-map = { git="https://github.com/1aim/total-order-multi-map" }
+mail-codec-core = { git="https://github.com/1aim/mail-codec-core" }
+mail-codec-components = { git="https://github.com/1aim/mail-codec-components" }
+
+[dependencies.mime]
+git="https://github.com/1aim/mime"
+branch="parser_revamp"
+features=["expose-param-utils"]
+version="0.4.0"
 
 [dependencies.tree_magic]
 version = "0.2.0"
@@ -35,18 +44,6 @@ version = "0.1.5"
 
 [dependencies.soft-ascii-string]
 git = "https://github.com/1aim/soft-ascii-string"
-
-[dependencies.total-order-multi-map]
-path = "./total-order-multi-map"
-
-[dependencies.vec1]
-path = "./vec1"
-
-[dependencies.mail-codec-core]
-path = "./core"
-
-[dependencies.mail-codec-components]
-path = "./components"
 
 [dev-dependencies]
 serde_json = "1.0.2"
@@ -64,6 +61,3 @@ default_impl_mail = ["default_impl_cpupool", "default_impl_fs", "default_impl_vf
 default_impl_name_composer = ["default_impl_any"]
 default_impl_vfs = ["default_impl_any"]
 traceing = [ "mail-codec-core/traceing", "mail-codec-components/traceing" ]
-
-[workspace]
-members = ["total-order-multi-map", "vec1", "core", "components"]
