--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ serde_json = "1.0.2"
 
 [features]
 debug_trace_tokens = []
+render-template-engine = []
 default = ["default_impl"]
 default_impl = [
     "default_impl_name_composer", "default_impl_component_id",
