--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,9 @@ error-chain = "0.11.0"
 chrono = "0.4.0"
 soft-ascii-string = "0.2.0"
 futures-cpupool = { version = "0.1.5", optional = true }
-tera = { version="0.11.1", optional = true }
+tera = { version = "0.11.1", optional = true }
+conduit-mime-types = { version = "0.7.3", optional = true}
+lazy_static = { version = "1.0.0", optional = true }
 
 [dependencies.mime]
 git="https://github.com/1aim/mime"
@@ -40,7 +42,7 @@ serde_json = "1.0.2"
 
 [features]
 debug_trace_tokens = []
-render-template-engine = []
+render-template-engine = ["conduit-mime-types", "lazy_static"]
 tera-bindings = ["tera", "render-template-engine"]
 default = ["default_impl"]
 default_impl = [
