--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ version="0.4.0"
 [dev-dependencies]
 serde_json = "1.0.2"
 regex = "0.2.6"
+futures-cpupool="0.1.5"
 
 [features]
 debug_trace_tokens = []
@@ -48,12 +49,8 @@ tera-bindings = ["tera", "render-template-engine"]
 default = ["default_impl"]
 default_impl = [
     "default_impl_name_composer", "default_impl_component_id",
-    "default_impl_simple_context"
 ]
 default_impl_name_composer = []
 default_impl_component_id = []
-default_impl_simple_context = [
-    "mail-codec/default_impl_cpupool", "mail-codec/default_impl_vfs",
-    "default_impl_component_id", "futures-cpupool"
-]
+
 traceing = [ "mail-codec/traceing" ]
