--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ futures-cpupool = { version = "0.1.5", optional = true }
 tera = { version = "0.11.1", optional = true }
 conduit-mime-types = { version = "0.7.3", optional = true}
 lazy_static = { version = "1.0.0", optional = true }
+tokio-smtp = { path="../depends/tokio-smtp", optional=true }
 
 [dependencies.mime]
 git="https://github.com/1aim/mime"
@@ -46,6 +47,7 @@ futures-cpupool="0.1.5"
 debug_trace_tokens = []
 render-template-engine = ["conduit-mime-types", "lazy_static"]
 tera-bindings = ["tera", "render-template-engine"]
+smtp = ['tokio-smtp']
 default = ["default_impl"]
 default_impl = [
     "default_impl_name_composer", "default_impl_component_id",
