chore(default_impl): added default_impl::simple_context::new
- it crates a CompositionContext containting a RandomCidGen,
  Fs resource loader (with cwd base dir) and future_cpupool
  offload component

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,9 +54,12 @@ tera-bindings = ["tera", "render-template-engine"]
 smtp = ['tokio-smtp', 'tokio-service', 'tokio-proto', 'emailaddress']
 default = ["default_impl"]
 default_impl = [
-    "default_impl_name_composer", "default_impl_component_id",
+    "default_impl_name_composer", "default_impl_component_id", "default_impl_simple_context"
 ]
 default_impl_name_composer = []
 default_impl_component_id = []
+default_impl_simple_context = [
+    "default_impl_component_id", "mail-codec/default_impl_fs", "mail-codec/default_impl_cpupool"
+]
 
 traceing = [ "mail-codec/traceing" ]
