--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ futures-cpupool = { version = "0.1.5", optional = true }
 tera = { version = "0.11.1", optional = true }
 conduit-mime-types = { version = "0.7.3", optional = true}
 lazy_static = { version = "1.0.0", optional = true }
-tokio-smtp = { path="../depends/tokio-smtp", optional=true }
+tokio-smtp = { git="https://github.com/1aim/tokio-smtp", branch="fixes", optional=true }
 tokio-service = { version = "0.1", optional=true }
 tokio-proto = { version = "0.1", optional=true }
 # this is used by tokio-smtp, we need it to convert our Mailbox to their Mailbox struct
