chore(api)*: simplified api
[won't compile tests, see below]

- use InspectEmbeddedResources + #[derive(..)] instead of
  strange side channel during serialize for setting content
  ids
- provide a compose methods on `MailSendData` instead of the
  strange CompositionBase trait + structs
- use Embedded/EmbeddedWithCId instead of Attachment, Embedding,
  EmbeddingWithCId,...
- remove unused crates
- rename mod `tempalate` => `template_enigne`
- changes are not yet applied to render_template_eninge and
  tera bindings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,12 @@ repository = "https://github.com/1aim/mail-template"
 mail-types = { git="https://github.com/1aim/mail-types" }
 mail-common = { git="https://github.com/1aim/mail-common" }
 mail-headers = { git="https://github.com/1aim/mail-headers" }
+mail-derive = { git="https://github.com/1aim/mail-derive" }
 
 failure = "0.1.1"
 futures = "0.1.14"
 log = "0.3.8"
 rand = "0.3.15"
-scoped-tls = "0.1.0"
-serde = "1.0.10"
-serde_derive = "1.0.10"
 chrono = "0.4.0"
 vec1 = { git="https://github.com/1aim/vec1" }
 soft-ascii-string = "0.2.0"
