--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,9 @@ git="https://github.com/1aim/mime"
 branch="parser_revamp"
 version="0.4.0"
 
+[dependencies.askama]
+version = "0.6.4"
+optional = true
 
 [dev-dependencies]
 serde_json = "1.0.2"
@@ -39,3 +42,4 @@ regex = "0.2.6"
 
 [features]
 default = []
+askama_engine = ["askama"]
