--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ failure = "0.1.1"
 futures = "0.1.14"
 vec1 = { git="https://github.com/1aim/vec1" }
 soft-ascii-string = "0.2.0"
+serde = { version="1.0.64", optional=true }
 
 
 
@@ -38,3 +39,4 @@ optional = true
 [features]
 default = []
 askama-engine = ["askama"]
+serialize-content-id = ["serde"]
