chore(deps) use vec1 v1.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ mail-derive = { git="https://github.com/1aim/mail-derive" }
 
 failure = "0.1.1"
 futures = "0.1.14"
-vec1 = { git="https://github.com/1aim/vec1" }
+vec1 = "1.0"
 soft-ascii-string = "1.0"
 serde = { version="1.0.64", optional=true }
 
