refactor(Embedded) changed serd related feature name
- `serialize-content-id` => `serialize-to-content-id`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,4 +39,4 @@ optional = true
 [features]
 default = []
 askama-engine = ["askama"]
-serialize-content-id = ["serde"]
+serialize-to-content-id = ["serde"]
