refactor(wip): fixed imports after moving deps into repo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,12 @@ members = [
     "headers",
     "internals"
 ]
+
+
+#[patch.crates-io]
+#mail = { path="./mail" }
+#mail-core = { path="./core" }
+#mail-headers = { path="./headers" }
+#mail-internals = { path="./internals" }
+
+
