--- a/headers/Cargo.toml
+++ b/headers/Cargo.toml
@@ -14,12 +14,12 @@ serde-impl = [ "serde", "vec1/serde" ]
 traceing = [ "mail-internals/traceing" ]
 
 [dependencies]
+mail-internals = { path="../internals" }
 failure = "0.1"
 owning_ref = "0.4"
 nom = "3.1.0"
 soft-ascii-string = "1"
 quoted-string = "0.6"
-mail-internals = { git="https://github.com/1aim/mail-internal" }
 vec1 = "1"
 chrono = "0.4"
 total-order-multi-map = "0.4.5"
