--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -16,13 +16,13 @@ default = ["default_impl_cpupool"]
 default_impl_cpupool = ["futures-cpupool"]
 
 [dependencies]
+mail-internals = { path="../internals" }
+mail-headers = { path="../headers" }
 failure = "0.1.2"
 futures = "0.1.24"
 log = "0.3.8"
 rand = "0.3.15"
 vec1 = "1"
-mail-internals = { git="https://github.com/1aim/mail-internals" }
-mail-headers = { git="https://github.com/1aim/mail-headers" }
 chrono = "0.4"
 soft-ascii-string = "1.0"
 serde = { version="1.0", optional=true, features=["derive"] }
