--- a/mail/Cargo.toml
+++ b/mail/Cargo.toml
@@ -27,7 +27,7 @@ mail-headers =  { path="../headers" }
 mail-core =  { path="../core" }
 #mail-template = { git="https://github.com/1aim/mail-template" }
 #mail-derive = { git="https://github.com/1aim/mail-derive" }
-mail-smtp = { git="https://github.com/1aim/mail-smtp", optional=true }
+mail-smtp =  { path="../smtp", optional=true }
 #mail-render-template-engine = {git="https://github.com/1aim/mail-render-template-engine", optional=true }
 
 [dev-dependencies]
