--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,6 +14,7 @@ repository = "https://github.com/1aim/mail-core"
 serde-impl = ["serde", "mail-headers/serde-impl"]
 default = ["default_impl_cpupool"]
 default_impl_cpupool = ["futures-cpupool"]
+test-utils = ["default", "lazy_static"]
 
 [dependencies]
 mail-internals = { path="../internals" }
@@ -27,6 +28,7 @@ chrono = "0.4"
 soft-ascii-string = "1.0"
 serde = { version="1.0", optional=true, features=["derive"] }
 checked_command = "0.2.2"
+lazy_static = { version="1.2.0", optional=true }
 
 [dependencies.mime]
 git="https://github.com/1aim/mime"
