--- a/smtp/Cargo.toml
+++ b/smtp/Cargo.toml
@@ -21,3 +21,7 @@ new-tokio-smtp = "0.8.1"
 [features]
 test-with-traceing = ["mail-internals/traceing"]
 extended-api = []
+
+
+[dev-dependencies]
+mail-core = { path="../core", features=["test-utils"] }
