--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ repository = "https://github.com/1aim/mail-template"
 
 [features]
 default = []
-handlebars-bindings = []
+handlebars-bindings = ["handlebars"]
 
 [dependencies]
 mail-core = { git="https://github.com/1aim/mail", features=["serde-impl"] }
@@ -27,6 +27,7 @@ serde = { version="1", features=["derive"] }
 toml = "0.4.8"
 maybe-owned = "0.3.2"
 
+handlebars = { version="1.1.0", optional=true }
 
 [dependencies.mime]
 git="https://github.com/1aim/mime"
