--- a/headers/Cargo.toml
+++ b/headers/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mail-headers"
-description = "[internal/mail-api] header parts for the mail-api crate (inkl. header map and standard header impl)"
-version = "0.6.0-wip"
+description = "[mail/headers] header parts for the mail crate (inkl. header map and standard header impl)"
+version = "0.6.0"
 authors = ["Philipp Korber <philippkorber@gmail.com>"]
 documentation = "https://docs.rs/mail-headers"
 keywords = []
@@ -14,7 +14,7 @@ serde-impl = [ "serde", "vec1/serde" ]
 traceing = [ "mail-internals/traceing" ]
 
 [dependencies]
-mail-internals = { path="../internals" }
+mail-internals = "0.2.0"
 failure = "0.1"
 owning_ref = "0.4"
 nom = "3.1.0"
@@ -24,12 +24,7 @@ vec1 = "1"
 chrono = "0.4"
 total-order-multi-map = "0.4.5"
 serde = { version="1.0", optional=true, features=["derive"] }
-
-[dependencies.mime]
-git="https://github.com/1aim/mime"
-branch="parser_revamp"
-features=["expose-param-utils"]
-version="0.4.0"
+media-type = "0.4.0-unstable"
 
 [dev-dependencies]
 serde_test = "1.0.80"
