chore(core/deps) use crates deps instead of path/github deps

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mail-core"
-version = "0.6.0-wip"
-description = "[internal/mail-api] provides the Mail type for the mail-api crates (inkl. multipart mime bodies, builder and resource type)"
+version = "0.6.0"
+description = "[mail/core] provides the Mail type for the mail crate (inkl. multipart mime bodies, builder and resource type)"
 authors = ["Philipp Korber <p.korber@1aim.com>"]
 keywords = ["mail-api", "internal"]
 categories = []
@@ -17,8 +17,8 @@ default_impl_cpupool = ["futures-cpupool"]
 test-utils = ["default", "lazy_static"]
 
 [dependencies]
-mail-internals = { path="../internals" }
-mail-headers = { path="../headers" }
+mail-internals = "0.2.0"
+mail-headers = "0.6.0"
 failure = "0.1.2"
 futures = "0.1.24"
 log = "0.3.8"
@@ -30,10 +30,7 @@ serde = { version="1.0", optional=true, features=["derive"] }
 checked_command = "0.2.2"
 lazy_static = { version="1.2.0", optional=true }
 
-[dependencies.mime]
-git="https://github.com/1aim/mime"
-branch="parser_revamp"
-version="0.4.0"
+media-type = "0.4.0-unstable"
 
 [dependencies.futures-cpupool]
 optional = true
