--- a/smtp/Cargo.toml
+++ b/smtp/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 authors = ["Philipp Korber <p.korber@1aim.com>"]
 name = "mail-smtp"
-version = "0.2.0-wip"
+version = "0.2.0"
 categories = []
-description = "[internal/mail-api] combines mail-core with new-tokio-smtp"
+description = "[mail/smtp] combines mail-core with new-tokio-smtp"
 documentation = "https://docs.rs/mail-smtp"
 keywords = ["mail-api"]
 license = "MIT OR Apache-2.0"
@@ -13,9 +13,9 @@ repository = "https://github.com/1aim/mail-smtp"
 [dependencies]
 futures = "0.1"
 failure = "0.1.1"
-mail-core = { path="../core" }
-mail-headers = { path="../headers"}
-mail-internals = { path="../internals" }
+mail-core = "0.6.0"
+mail-headers = "0.6.0"
+mail-internals = "0.2.0"
 new-tokio-smtp = "0.8.1"
 
 [features]
@@ -24,4 +24,4 @@ extended-api = []
 
 
 [dev-dependencies]
-mail-core = { path="../core", features=["test-utils"] }
+mail-core = { version="0.6.0", features=["test-utils"] }
