--- a/mail/Cargo.toml
+++ b/mail/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mail"
-version = "0.1.0"
-authors = ["Philipp Korber <philippkorber@gmail.com>"]
+version = "0.6.0"
+authors = ["Philipp Korber <p.korber@1aim.com>"]
 categories = []
 #TODO go through the keywords
 keywords = ["mail", "rfc5322", "email", "mime", "smtp", "template"]
@@ -9,12 +9,11 @@ description = "mail, facade for a number of mail related crates for creating and
 license = "MIT OR Apache-2.0"
 readme = "./README.md"
 repository = "https://github.com/1aim/mail"
-autoexamples = false
+autoexamples = true
 
 [features]
 smtp = ["mail-smtp"]
 handlebars = ["mail-template/handlebars-bindings"]
-
 traceing = ["mail-internals/traceing", "mail-headers/traceing"]
 test-utils = ["mail-core/test-utils"]
 
@@ -34,11 +33,11 @@ required-features = ["smtp"]
 
 
 [dependencies]
-mail-internals =  { path="../internals" }
-mail-headers =  { path="../headers" }
-mail-core =  { path="../core" }
-mail-template = { path="../template" }
-mail-smtp =  { path="../smtp", optional=true }
+mail-internals = "0.2.0"
+mail-headers =  "0.6.0"
+mail-core =  "0.6.0"
+mail-template = "0.6.0"
+mail-smtp =  { version="0.2.0", optional=true }
 
 [dev-dependencies]
 rpassword = "2.0.0"
