--- a/mail/Cargo.toml
+++ b/mail/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mail"
-version = "0.6.10"
-authors = ["Philipp Korber <p.korber@1aim.com>"]
+version = "0.6.11"
+authors = ["Philipp Korber <p.korber@dac.eu>"]
 categories = []
 keywords = ["mail", "rfc5322", "mime", "smtp", "template"]
 description = "mail, facade for a number of mail related crates for creating and sending mails"
@@ -50,4 +50,5 @@ soft-ascii-string = "1.0"
 futures = "0.1.0"
 failure = "0.1.1"
 
-
+[badges]
+maintenance = { status = "deprecated" }
